# mining

./: README.md  pyproject.toml
archive/original/: README.md
archive/original/work/apriori/: code.ipynb
archive/original/work/classify/: step.doc
archive/original/work/diff/: code.ipynb  step.doc
archive/original/work/processing/: code.ipynb  document.doc
archive/original/work/rel/: code.ipynb
archive/original/work/stats/: code.ipynb
archive/original/work/summary/: step.doc
data/: README.md  java_scores.csv  mall_customers.csv  menu_orders.xls  milk_production.csv  scores.csv  turnover.csv
scripts/: validate_tutorials.py
tutorials/association-rules/: README.md  apriori-from-scratch.ipynb
tutorials/customer-segmentation/: README.md  customer-segmentation.ipynb
tutorials/data-exploration/: README.md  data-exploration.ipynb
tutorials/environment-setup/: README.md
tutorials/market-basket-analysis/: README.md  market-basket-analysis.ipynb
tutorials/temperature-autoregression/: README.md  temperature-autoregression.ipynb
tutorials/time-series-arima/: README.md  milk-production-arima.ipynb
