[project]
name = "mining"
version = "0.1.0"
description = "Data mining tutorials with curated datasets and optimized notebooks."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=6.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "mlxtend>=0.23",
    "notebook>=7.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "xlrd>=2.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
